fix style bug on small screens in services section

--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -44,6 +44,10 @@
         display: flex;
         flex-wrap: wrap;
 
+        a {
+          width: 100%;
+        }
+
 
         >a>div {
           display: flex;
